--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -2,6 +2,7 @@
 {% set active_page = "page.index" %}
 
 {% block content %}
+{% if not g.user.is_authenticated %}
 <div class="row text-center">
     <div class="col-lg-12">
         <div class="page-header">
@@ -11,7 +12,6 @@
     </div>
 </div>
 
-{% if not g.user.is_authenticated %}
 <div class="row text-center bottom-buffer">
     <div class="col-lg-12">
         <div>
@@ -23,23 +23,10 @@
 
 <div class="row text-center bottom-buffer">
     <div class="col-lg-12">
-        <a class="btn btn-warning" id="clear">Clear</a>
-        <a class="btn btn-default" id="shorter">Shorter</a>
-        <a class="btn btn-default" id="taller">Taller</a>
-        <a class="btn btn-primary" id="print">Print</a>
+        <a class="btn btn-info" href="{{url_for('page.live')}}">View Stream</a>
     </div>
 </div>
 
-<div class="row text-center">
-    <div class="col-lg-12">
-        <canvas style="border: 1px solid black" id="app" width="768" height="128"></canvas>
-    </div>
-</div>
 {% endif %}
 
-{% endblock %}
-
-{% block scripts %}
-<script src="/static/paper-full.min.js"></script>
-<script src="/static/imagedraw.js"></script>
 {% endblock %}
