Remove extra routes

--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -19,14 +19,66 @@
         </div>
     </div>
 </div>
-{% else %}
+{% endif %}
 
+{% if show_stream %}
 <div class="row text-center bottom-buffer">
+    <a class="btn btn-info btn-xs pull-right" href="{{url_for('page.index', stream='no')}}">Hide Stream</a>
+</div>
+<div class="row text-center bottom-buffer">
+    <div class="col-lg-8">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.twitch.tv/?channel=talon876" class="embed-responsive-item" allowfullscreen="true" scrolling="no"></iframe>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class="embed-responsive embed-responsive-4by3 chat-embed">
+            <iframe src="https://www.twitch.tv/talon876/chat?popout=" class="embed-responsive-item" allowfullscreen="true" height="500" scrolling="no"></iframe>
+        </div>
+    </div>
+</div>
+{% else %}
+<div class="row text-center bottom-buffer">
+    <a class="btn btn-info" href="{{url_for('page.index')}}">Show Stream</a>
+</div>
+{% endif %}
+
+{% if g.user.is_authenticated %}
+<div class="row bottom-buffer">
     <div class="col-lg-12">
-        <a class="btn btn-info" href="{{url_for('page.live')}}">View Stream</a>
+        <div class="input-group input-group-lg">
+            <input autofocus autocomplete="off" type="text" class="form-control input-lg" id="messageField" placeholder="Message...">
+            <span class="input-group-btn">
+                <button id="sendMessage" class="btn btn-primary btn-lg" type="submit">Send</button>
+            </span>
+        </div>
     </div>
 </div>
 
+<hr>
+
+<div class="row bottom-buffer text-center">
+    <div class="col-lg-12">
+        <div class="btn-group" role="group">
+            <a class="btn btn-lg btn-warning" id="clear">Clear</a>
+            <a class="btn btn-lg btn-default" id="shorter">Shorter</a>
+            <a class="btn btn-lg btn-default" id="taller">Taller</a>
+            <a class="btn btn-lg btn-primary" id="print">Print</a>
+        </div>
+    </div>
+</div>
+
+<div class="row text-center">
+    <div class="col-lg-12">
+        <canvas style="border: 1px solid black" id="app" width="768" height="128"></canvas>
+    </div>
+</div>
 {% endif %}
 
+{% endblock %}
+
+{% block scripts %}
+<script src="/static/paper-full.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+<script src="/static/imagedraw.js"></script>
 {% endblock %}
