--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -47,7 +47,7 @@
 <div class="row bottom-buffer">
     <div class="col-lg-12">
         <div class="input-group input-group-lg">
-            <input autofocus autocomplete="off" type="text" class="form-control input-lg" id="messageField" placeholder="Message...">
+            <input autofocus autocomplete="off" type="text" maxlength="512" class="form-control input-lg" id="messageField" placeholder="Message...">
             <span class="input-group-btn">
                 <button id="sendMessage" class="btn btn-primary btn-lg" type="submit">Send</button>
             </span>
