--- a/paperwaster/web/templates/base.html
+++ b/paperwaster/web/templates/base.html
@@ -68,5 +68,9 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
         {% block scripts %}{% endblock %}
+        {% if not debug %}
+        <script src="//static.getclicky.com/js" type="text/javascript"></script>
+        <script type="text/javascript">try{ clicky.init(101064677); }catch(e){}</script>
+        {% endif %}
     </body>
 </html>
