Add more instructions

--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -17,6 +17,9 @@
         <div>
         <a class="narrow-vpadding" href="{{ url_for('page.authorize', provider='twitch') }}"><img src="/static/twitch-login.png"/></a> to draw images!
         </div>
+        <div>
+            Once you've connected your Twitch account you will be able to send messages and draw images to send to the printer.
+        </div>
     </div>
 </div>
 {% endif %}
