--- a/paperwaster/web/templates/imagedraw.html
+++ b/paperwaster/web/templates/imagedraw.html
@@ -28,6 +28,6 @@
 
 {% block scripts %}
 <script src="/static/paper-full.min.js"></script>
-<script src="/static/imagedraw.js"></script>
+<script src="/static/paperwaster.js"></script>
 {% endblock %}
 
