--- a/paperwaster/web/templates/live.html
+++ b/paperwaster/web/templates/live.html
@@ -74,5 +74,5 @@
 {% block scripts %}
 <script src="/static/paper-full.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-<script src="/static/imagedraw.js"></script>
+<script src="/static/paperwaster.js"></script>
 {% endblock %}
