--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -50,7 +50,7 @@
 <div class="row bottom-buffer">
     <div class="col-lg-12">
         <div class="input-group input-group-lg">
-            <input autofocus autocomplete="off" type="text" maxlength="512" class="form-control input-lg" id="messageField" placeholder="Send a message to the printer...">
+            <input autofocus autocomplete="off" type="text" maxlength="512" class="form-control input-lg" id="messageField" placeholder="Print a message...">
             <span class="input-group-btn">
                 <button id="sendMessage" class="btn btn-primary btn-lg" type="submit">Send</button>
             </span>
