--- a/paperwaster/web/static/css/style.css
+++ b/paperwaster/web/static/css/style.css
@@ -1,3 +1,9 @@
+body {
+    background-color: #4e4e4e;
+}
+canvas {
+    background-color: #f5f5f5;
+}
 .navbar-nav > li > .narrow-vpadding {
     padding-top: 7px;
     padding-bottom: 6px
