--- a/paperwaster/web/static/css/style.css
+++ b/paperwaster/web/static/css/style.css
@@ -32,4 +32,21 @@ canvas {
 .donation-message {
     cursor: pointer;
     font-style: italic;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+}
+
+[v-cloak] {
+    display: none;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .4s;
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
 }
