--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -98,10 +98,9 @@
 {% endif %}
 
 <hr>
-{% raw %}
 <div id="donateApp">
 <div class="row text-center text-muted">
-    <donate-message ref="donateMessage" :reasons="[
+    <donate-message donate-url="{{url_for('page.donate')}}" :initial-delay="60*1000" :delay="30*1000" :reasons="[
         'to help keep things running!',
         'to buy me a drink!',
         'to waste more paper!',
@@ -117,8 +116,6 @@
     </donate-message>
 </div>
 </div>
-{% endraw %}
-
 {% endblock %}
 
 {% block scripts %}
