--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -90,7 +90,7 @@
 
 <hr>
 <div class="row text-center text-muted">
-    <donate-message donate-url="{{url_for('page.donate')}}" :initial-delay="60*1000" :delay="30*1000" :reasons="[
+    <donate-message donate-url="{{url_for('page.donate')}}" :initial-delay="30*1000" :delay="30*1000" :reasons="[
         'to help keep things running!',
         'to buy me a drink!',
         'to waste more paper!',
@@ -115,6 +115,7 @@
 {% else %}
 <script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.min.js"></script>
 {% endif %}
+<script src="//cdnjs.cloudflare.com/ajax/libs/howler/2.0.4/howler.core.min.js"></script>
 <script src="/static/paper-full.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 <script src="/static/paperwaster.js"></script>
