--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -26,27 +26,7 @@
 </div>
 {% endif %}
 
-{% if show_stream %}
-<div class="row text-center bottom-buffer">
-    <a class="btn btn-info btn-xs pull-right" href="{{url_for('page.index', stream='no')}}">Hide Stream</a>
-</div>
-<div class="row text-center bottom-buffer">
-    <div class="col-lg-8">
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe src="https://player.twitch.tv/?channel=talon876" class="embed-responsive-item" allowfullscreen="true" scrolling="no"></iframe>
-        </div>
-    </div>
-    <div class="col-lg-4">
-        <div class="embed-responsive embed-responsive-4by3 chat-embed">
-            <iframe src="https://www.twitch.tv/talon876/chat?popout=" class="embed-responsive-item" allowfullscreen="true" height="500" scrolling="no"></iframe>
-        </div>
-    </div>
-</div>
-{% else %}
-<div class="row text-center bottom-buffer">
-    <a class="btn btn-info" href="{{url_for('page.index')}}">Show Stream</a>
-</div>
-{% endif %}
+<twitch-stream username="talon876"></twitch-stream>
 
 {% if g.user.is_authenticated %}
 <div class="row bottom-buffer">
