--- a/paperwaster/web/static/css/style.css
+++ b/paperwaster/web/static/css/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #dedede;
 }
 canvas {
-    background-color: #f5f5f5;
+    background-color: #fff;
 }
 .navbar-nav > li > .narrow-vpadding {
     padding-top: 7px;
