Use axios for requests

--- a/paperwaster/web/templates/index.html
+++ b/paperwaster/web/templates/index.html
@@ -82,6 +82,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.min.js"></script>
 {% endif %}
 <script src="//cdnjs.cloudflare.com/ajax/libs/howler/2.0.4/howler.core.min.js"></script>
+<script src="//unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/static/paper-full.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 <script src="/static/app.js"></script>
